--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,16 @@
 {
   "version": 2,
-
-  "builds": [{ "src": "main.py", "use": "@vercel/python" }],
-
-  "routes": [{ "src": "/(.*)", "dest": "main.py" }]
+  "builds": [
+    {
+      "src": "./index.py",
+      "use": "@vercel/python",
+      "config": { "runtime": "python3.12.4" }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
